--- a/Runbelievable/www/partials/sessionEnCours.html
+++ b/Runbelievable/www/partials/sessionEnCours.html
@@ -16,7 +16,7 @@
                 <td>Calorie : {{session.calorie| number : 0}} cal</td>
             </tr>
             <tr>
-                <td> <span id="chronotime" style="font-size: 30px;"> <p>0:00:00</p></span><p ng-show="enPause" id="pauseTime">CHRONO PAUSE LOL</p></td>
+                <td> <span id="chronotime" style="font-size: 30px;"> <p>0:00:00</p></span><p ng-show="enPause" id="pauseTime">CHRONO PAUSE</p></td>
                 <td> Vitesse actuelle : <div id="vitesseActuelle"></div> km/h</td>
             </tr>
         </tbody>
