--- a/Runbelievable/www/ressources/css/style2.scss
+++ b/Runbelievable/www/ressources/css/style2.scss
@@ -1,22 +1,49 @@
 
 $largeurMenu: 270px;
 
+// Corps
 body {
-    background: white;
-    font-family: 'Open Sans', sans-serif !important;
-    color: #666;
+    background: #fafafa;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+
+    section {
+        font-family: 'Open Sans', sans-serif !important;
+        font-weight: 100;
+        color: #666;
+        line-height: 20px;
+        margin-bottom: 20px;
+        font-size: 12px;
+        letter-spacing: 0px;
+        overflow-x: hidden;
+    }
+
     a {
         cursor: pointer;
     }
     a:hover {
         text-decoration: none;
     }
+
+    h3 {
+        font-size: 16px;
+        margin-bottom: 10px;
+        color: #1f1f1f;
+        font-weight: 900;
+        font-family: 'Lato', sans-serif !important;
+        margin: 10px 0px;
+    }
 }
 
+// Header
 #header {
-    font-family: 'Englebert', cursive;
+    font-family: 'Roboto', sans-serif !important;
     background-color: #1E1E1E;
     font-size: 21px;
+    font-weight: 100;
     line-height: 49px;
     height: 49px;
     width: 100%;
@@ -50,6 +77,7 @@ body {
     }
 }
 
+// Nouveau profil
 #new_profil {
     .scroll {
         padding: 4%;
@@ -92,7 +120,7 @@ body {
 
 .view {
     position: absolute;
-    top: 60px;
+    top: 49px;
     left: 0px;
     width: 100%;
     padding: 15px;
@@ -216,10 +244,6 @@ body {
     transition: right 300ms linear 0s;
 }
 
-body {
-	background-image: url("../img/fond.png");
-	background-repeat: repeat;
-}
 .chrono p {
     color:#FFFFFF;
 }         
