--- a/Runbelievable/www/view/sessionEnCours.html
+++ b/Runbelievable/www/view/sessionEnCours.html
@@ -17,7 +17,7 @@
             </tr>
             <tr>
                 <td> <span id="chronotime" style="font-size: 30px;"> <p>0:00:00</p></span><p ng-show="enPause" id="pauseTime">CHRONO PAUSE</p></td>
-                <td> Vitesse actuelle : <div id="vitesseActuelle"></div> km/h</td>
+                <td> Vitesse actuelle : <div id="vitesseActuelle">0</div> km/h</td>
             </tr>
         </tbody>
     </table>
