Chronometre modifié, a maintenant un fonctionnement mytérieux

--- a/Runbelievable/www/view/sessionEnCours.html
+++ b/Runbelievable/www/view/sessionEnCours.html
@@ -16,7 +16,7 @@
                 <td>Calorie : {{session.calorie| number : 0}} cal</td>
             </tr>
             <tr>
-                <td> <span id="chronotime" style="font-size: 30px;"> <p>0:00:00</p></span><p ng-show="enPause" id="pauseTime">CHRONO PAUSE</p></td>
+                <td><span id="chronotime">0:00:00</span><br><span ng-show="enPause" id="pauseTime">0:00:00</span></td>
                 <td> Vitesse actuelle : <div id="vitesseActuelle">0</div> km/h</td>
             </tr>
         </tbody>
