Debut planification session

--- a/Runbelievable/www/partials/planificateurSession.html
+++ b/Runbelievable/www/partials/planificateurSession.html
@@ -1,15 +1,14 @@
 <section ng-controller="SessionController">
     <div> <h2></h2>
-        <div>
-            <div> Echauffement : </div>
-                <div class="onoffswitch">
-                <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
-                <label class="onoffswitch-label" for="myonoffswitch">
-                    <div class="onoffswitch-inner"></div>
-                    <div class="onoffswitch-switch"></div>
-                </label>
-            </div>
-        </div>
+        <FORM>
+            <SELECT name="nom" size="1" class="form-control">
+                <OPTION selected>Echauffement
+                <OPTION>Récupération
+                <OPTION> Footing
+                <OPTION> Sprint
+                <OPTION> Marathon
+            </SELECT>
+        </FORM>
     </div>
 </section>
 
