--- a/Runbelievable/www/view/planificateurSession.html
+++ b/Runbelievable/www/view/planificateurSession.html
@@ -32,6 +32,7 @@
 
 <script>
     var etape = new Array();
+    var jsonEtape = JSON.stringify(etape);
 
     $(".addetape").click(function() {
         $(".etapes tbody").append("<tr>" + $(".etapes tbody tr:nth-child(1)").html() + "</tr>");
@@ -49,7 +50,7 @@
             etape.push(tmp);
 
         });
-        console.log(etape);
+        jsonEtape = JSON.stringify(etape);
     });
 
 
