--- a/Interfaceweb/ressources/styles/style.css
+++ b/Interfaceweb/ressources/styles/style.css
@@ -1,1 +1,5 @@
 body{font-family:'Open Sans', sans-serif !important;color:#666}body a{cursor:pointer}body a:hover{text-decoration:none}
+
+.label-primary {
+    background-color: #428bca;
+}
