--- a/Runbelievable/www/view/comptes/accueil.html
+++ b/Runbelievable/www/view/comptes/accueil.html
@@ -1,7 +1,7 @@
 
 <div class="popup">
-    <div class="scroll">
-        <table class="table">
+    <div class="scroll" style="width: 100%;">
+        <table class="table" style="margin-bottom: 0px;">
             <tbody>
                 <tr>
                     <td>
